--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,9 @@
   width: inherit;
   height: inherit;
 }
+
+@media screen and (min-width: 480px) {
+  .tabs::-webkit-scrollbar {
+    width: 0 !important;
+  }
+}
