--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,4 +11,20 @@
   .tabs::-webkit-scrollbar {
     width: 0 !important;
   }
+
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 }
